--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ fastapi>=0.110.0
 uvicorn[standard]>=0.27.0
 kerykeion>=5.7.0
 pytz>=2024.1
-pydantic>=2.6.0      ← Versión más reciente con wheels precompilados
+pydantic>=2.6.0
 geopy>=2.4.1
