--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,23 @@
 # SAVP v3.6 Final - Requirements
-# Febrero 2025
+# Febrero 2025 - Compatible Python 3.13
 
 # Core
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 pydantic==2.5.3
 
-# Astrología (versiones corregidas)
+# Astrología
 kerykeion==5.7.1
 pyswisseph==2.10.3.2
 
 # Visualizaciones
-matplotlib==3.8.2
-numpy==1.26.3
+matplotlib==3.9.0
+numpy==1.26.4
 
 # Documentos
 python-docx==1.1.0
-reportlab==4.0.9
-Pillow==10.2.0
+reportlab==4.2.5
+Pillow==10.4.0
 
 # Utilidades
 python-dateutil==2.8.2
