--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,25 @@
 # SAVP v3.6 Final - Requirements
-# Febrero 2025 - Compatible Python 3.13
+# Versiones PROBADAS y ESTABLES
+# Forzar Python 3.11 (3.13 da problemas de compilación)
 
-# Core
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.3
+# Core Web
+fastapi==0.115.5
+uvicorn[standard]==0.32.1
+pydantic==2.10.3
 
 # Astrología
 kerykeion==5.7.1
 pyswisseph==2.10.3.2
 
-# Visualizaciones
-matplotlib==3.9.0
-numpy==1.26.4
+# Visualización (versiones con wheels)
+matplotlib==3.9.3
+numpy==2.1.3
 
 # Documentos
-python-docx==1.1.0
+python-docx==1.1.2
 reportlab==4.2.5
-Pillow==10.4.0
+Pillow==11.0.0
 
 # Utilidades
-python-dateutil==2.8.2
-pytz==2024.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
